# DiscordBot_Template_Rust

./: .gitignore  Cargo.toml
src/: bot.rs  main.rs  utils.rs
src/commands/: mod.rs  ping.rs
src/data/: mod.rs  structs.rs
src/handlers/: mod.rs  ready.rs
